# ros-playground

./: .gitignore  README.md
move_forward/: package.xml  setup.cfg  setup.py
move_forward/move_forward/: client.py  service.py
src/body_point_transform_to_location/: CMakeLists.txt  config.rviz  package.xml
src/body_point_transform_to_location/src/: body_point_transform_to_location.cpp
src/body_pose_computation_example/: CMakeLists.txt  package.xml
src/body_pose_computation_example/src/: example.cpp
src/circle_visualizer/: CMakeLists.txt  package.xml
src/circle_visualizer/src/: circle_visualizer.cpp
src/grid_search/: CMakeLists.txt  package.xml
src/grid_search/include/search/: node.hpp
src/grid_search/include/search/example_problems/: grid_problem.hpp
src/grid_search/src/: a_star_with_events.cpp  grid_search.cpp
src/grid_search_interfaces/: CMakeLists.txt  package.xml
src/grid_search_interfaces/msg/: GridNode.msg  GridSearchEvent.msg
src/grid_search_visualizer/: CMakeLists.txt  package.xml
src/grid_search_visualizer/include/search/: best_first_search.hpp  helpers.hpp  problem.hpp
src/grid_search_visualizer/include/search/example_problems/: grid_problem.hpp
src/grid_search_visualizer/include/search/informed/: a_star_search.hpp  greedy_best_first_search.hpp
src/grid_search_visualizer/include/search/uninformed/: breadth_first_search.hpp  iterative_deepening_search.hpp  uniform_cost_search.hpp
src/grid_search_visualizer/src/: grid_search_visualizer.cpp
src/maze_sim/: CMakeLists.txt  package.xml
src/maze_sim/launch/: better_spawn_turtlebot3.launch.py  maze_world.launch.py
src/maze_sim/worlds/: maze_world.sdf  maze_world_ign.sdf
src/maze_sim/worlds/turtlebot3_burger/: model.sdf
src/node_interfaces/: CMakeLists.txt  package.xml
src/node_interfaces/msg/: Node.msg
src/random_exploration_bot/: CMakeLists.txt  package.xml
src/random_exploration_bot/src/: random_exploration_bot.cpp
src/relative_body_pose/: CMakeLists.txt  package.xml
src/relative_body_pose/src/: relative_body_pose.cpp
src/shape_interfaces/: CMakeLists.txt  package.xml
src/shape_interfaces/msg/: Circle.msg  RenderableCircle.msg
src/vis_rotations/: CMakeLists.txt  package.xml  rvis.config.rviz
src/vis_rotations/src/: vis_rotations.cpp
